# programming_exercises

./: .gitlab-ci.yml  Earthfile  Makefile  README.md  flake.nix
.github/: renovate.json5
.github/workflows/: continuous-integration.yml  haskell-continuous-integration.yml  lisp-continuous-integration.yml  rust-continuous-integration.yml
.gitlab/ci/factorial/: common_lisp.yml
.gitlab/ci/fibonacci/: common_lisp.yml
.gitlab/ci/largest_number/: common_lisp.yml  rust.yml
.gitlab/ci/sum_list/: common_lisp.yml
advent_of_code/2021/day1/haskell/: .gitignore  Day1.cabal  Earthfile  Makefile  flake.nix
advent_of_code/2021/day1/haskell/ci/: check-haskell-formatting.Dockerfile  check-haskell-formatting.sh  check-haskell-linting.Dockerfile  compile.Dockerfile  compile.sh  fix-haskell-formatting.Dockerfile  unit-test.Dockerfile
advent_of_code/2021/day1/haskell/lib/: Day1.hs
advent_of_code/2021/day1/haskell/src/: Day1.hs  Main.hs
advent_of_code/2021/day1/haskell/tests/: Tests.hs
advent_of_code/2021/day2/haskell/: .gitignore  Day2.cabal  Earthfile  Makefile  flake.nix
advent_of_code/2021/day2/haskell/ci/: check-haskell-formatting.Dockerfile  check-haskell-linting.Dockerfile  check-haskell-linting.sh  compile.Dockerfile  fix-haskell-formatting.Dockerfile  fix-haskell-formatting.sh  unit-test.Dockerfile  unit-test.sh
advent_of_code/2021/day2/haskell/src/: Day2.hs  Main.hs
advent_of_code/2021/day2/haskell/tests/: Tests.hs
advent_of_code/2021/day3/haskell/: Day3.cabal
advent_of_code/2021/day3/haskell/src/: Day3.hs  Main.hs
advent_of_code/2021/day3/haskell/tests/: Tests.hs
cracking_the_coding_interview/: README.md
cracking_the_coding_interview/chapter_1_arrays_and_strings/check_permutation/: Cargo.toml  Earthfile
cracking_the_coding_interview/chapter_1_arrays_and_strings/check_permutation/ci/: compile.Dockerfile
cracking_the_coding_interview/chapter_1_arrays_and_strings/check_permutation/src/: lib.rs  tests.rs
cracking_the_coding_interview/chapter_1_arrays_and_strings/is_unique/: Cargo.toml  Earthfile
cracking_the_coding_interview/chapter_1_arrays_and_strings/one_away/: Cargo.toml  Earthfile
cracking_the_coding_interview/chapter_1_arrays_and_strings/palindrome_permutation/: Cargo.toml  Earthfile
cracking_the_coding_interview/chapter_1_arrays_and_strings/palindrome_permutation/ci/: fix-rust-formatting.Dockerfile
cracking_the_coding_interview/chapter_1_arrays_and_strings/palindrome_permutation/src/: lib.rs  tests.rs
cracking_the_coding_interview/chapter_1_arrays_and_strings/rotate_matrix/: Cargo.toml
cracking_the_coding_interview/chapter_1_arrays_and_strings/string_compression/: Cargo.toml  Earthfile
cracking_the_coding_interview/chapter_1_arrays_and_strings/string_rotation/: Cargo.toml  Earthfile  Makefile
cracking_the_coding_interview/chapter_1_arrays_and_strings/urlify/: Cargo.toml  Earthfile  README.md
cracking_the_coding_interview/chapter_1_arrays_and_strings/zero_matrix/: Cargo.toml
general/factorial/common_lisp/: Earthfile  Makefile  factorial.lisp  flake.nix
general/fibonacci/common_lisp/: .gitignore  Earthfile  Makefile  fibonacci.lisp
general/largest_number/common_lisp/: Earthfile  Makefile  largest_number.lisp
general/largest_number/rust/: Cargo.toml  Earthfile
general/sum_list/common_lisp/: Earthfile  Makefile  sum_list.lisp
largest_number/rust/: Cargo.toml
largest_number/rust/src/: lib.rs
leetcode/: README.md
leetcode/104_maximum_depth_of_binary_tree/rust/: Cargo.toml  Earthfile
leetcode/1091_shortest_path_in_binary_matrix/rust/: Cargo.toml  Earthfile
leetcode/1102_path_with_maximum_minimum_value/rust/: Cargo.toml  Earthfile
leetcode/111_minimum_depth_of_binary_tree/rust/: Cargo.toml
leetcode/1197_minimum_knight_moves/rust/: Cargo.toml  Earthfile
leetcode/11_container_with_most_water/rust/: Cargo.toml
leetcode/1299_replace_elements_with_greatest_element_on_right_side/rust/: Cargo.toml  Earthfile
leetcode/1351_count_negative_numbers_in_a_sorted_matrix/rust/: Cargo.toml  Earthfile
leetcode/1373_maximum_sum_bst_in_binary_tree/rust/: Cargo.toml  Earthfile
leetcode/1382_balance_a_binary_search_tree/rust/: Cargo.toml  Earthfile
leetcode/139_word_break/rust/: Cargo.toml
leetcode/1429_first_unique_number/rust/: Cargo.toml  Earthfile  Makefile
leetcode/1478_allocate_mailboxes/rust/: Cargo.toml
(+251 files in other folders)
