[package]
name = "check_permutation"
version = "0.1.0"
authors = ["C <DeveloperC@protonmail.com>"]
edition = "2021"


[dependencies]


[dev-dependencies]
# For parameterized testing.
rstest = "=0.25.0"

# For property-based testing.
proptest = "=1.6.0"
rand = "=0.8.4"


[profile.release]
lto = 'fat'
codegen-units = 1
