[package]
name = "check_permutation"
version = "0.1.0"
authors = ["C <DeveloperC@protonmail.com>"]
edition = "2021"


[dependencies]


[dev-dependencies]
# For parameterized testing.
rstest = "=0.26.1"

# For property-based testing.
proptest = "=1.10.0"
rand = "=0.9.2"


[profile.release]
lto = 'fat'
codegen-units = 1
