cabal-version:      2.4
name:               Day1
version:            0.1.0


library Day1Lib
    exposed-modules: Day1
    hs-source-dirs: lib
    build-depends: base
    default-language: Haskell2010


executable Day1
    main-is: Main.hs
    hs-source-dirs: src
    build-depends: base, Day1Lib
    default-language: Haskell2010


test-suite Day1Tests
    type: exitcode-stdio-1.0
    main-is: Tests.hs
    hs-source-dirs: tests
    default-language: Haskell2010
    build-depends: base, HUnit, Day1Lib
    default-language: Haskell2010