cabal-version:      2.4
name:               Day2
version:            0.1.0


library Day2Lib
    exposed-modules: Day2
    hs-source-dirs: lib
    build-depends: base
    default-language: Haskell2010


executable Day2
    main-is: Main.hs
    hs-source-dirs: src
    build-depends: base, Day2Lib
    default-language: Haskell2010


test-suite Day2Tests
    type: exitcode-stdio-1.0
    main-is: Tests.hs
    hs-source-dirs: tests
    default-language: Haskell2010
    build-depends: base, HUnit, Day2Lib
    default-language: Haskell2010