cabal-version:      2.4
name:               Day3
version:            0.1.0


executable Day3Bin
    main-is:          Main.hs
    hs-source-dirs:   src
    default-language: Haskell2010
    other-modules: Day3
    build-depends:    base


library Day3Lib
    exposed-modules:  Day3
    hs-source-dirs: src
    build-depends:    base


test-suite Day3Tests
    main-is               : Tests.hs
    hs-source-dirs        : tests
    default-language      : Haskell2010
    type                  : exitcode-stdio-1.0
    build-depends         : base, HUnit, Day3Lib
